# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.151 2005/01/23 19:21:40 wolf31o2 Exp $

  23 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Firmware updated to use new /lib/firmware directory.

  16 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
  fix from pvdabeel@gentoo.org. patch fixes a small bug that caused grp to not
  work when both -f and -C were used on the command line.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-packages.sh, targets/stage1/stage1-chroot.sh,
  targets/stage3/stage3-chroot.sh:
  Added a portage version check to each target that uses --newuse to ensure a
  high enough version is used. This resolves bug #75336.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start:
  Possible local.start fix for beejay.

  12 Jan 2005; John Davis <zhen@gentoo.org>
  modules/embedded.py:
  kernel building patch for embedded from mutex@gentoo.org (bug #76542)

  11 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh:
  Added ccache support to genkernel call in livecd-stage2.

  11 Jan 2005; John Davis <zhen@gentoo.org>
  targets/netboot/netboot-busybox.sh, targets/netboot/netboot-combine.sh,
  targets/netboot/netboot-image.sh, targets/netboot/netboot-kernel.sh,
  targets/netboot/netboot.sh:
  netboot path from gmsoft@gentoo.org. The patch addresses many bugs and adds
  some feature enhancements.

  11 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh,